--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,230 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Media queries using max- and min- width */
+
+body {
+	margin-left: 5px;
+}
+
+nav {
+	position: fixed;
+	width: 90%;
+	background-color: white;
+	height: 50px;
+	display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.nav-list {
+	display: flex;
+    align-items: baseline;
+    align-self: flex-start;
+}
+
+.nav-item {
+	justify-content: space-between;
+	padding: 20px;
+}
+
+.logo {
+    display: flex;
+	align-self: flex-end;
+	size: 75%;
+}
+
+header {
+	width: 100%;
+	padding: 50px 0px;
+	display: flex;
+    justify-content: space-between;
+    margin: auto;
+}
+
+.head-item {
+
+	text-transform: uppercase;
+	line-height: 1.5;
+    padding: 20px;
+    margin: auto;
+}
+
+.header-text {
+    text-align: center;
+	line-height: 1.5;
+	font-size: 100px;
+}
+
+button {
+    /* display: flex; */
+    align-self: center;
+    text-transform: capitalize;
+    font-size: 18px;
+    background: none;
+    width: 150px;
+    height: 30px;
+    margin-left: 100px;
+    margin-right: auto;
+}
+
+.header-img {
+	height: 500px;
+	width: auto;
+	max-width: 50%;
+}
+
+.main-container {
+	border-top: 1px solid black;
+}
+
+.main {
+	padding: 20px 0px;
+}
+
+.top {
+	display: flex;
+	justify-content: space-between;
+}
+
+.tp {
+	width: 45%;
+}
+
+.middle-image {
+	width: 90%;
+	margin: auto;
+}
+
+.bottom {
+	justify-content: space-between;
+	display: flex;
+}
+
+.btm {
+	width: 30%;
+}
+
+.contact {
+	border-top: 1px solid black;
+	padding-top: 20px;
+}
+
+footer{
+	margin: 50px;
+	text-align: center;
+}
+
+@media (max-width: 800px) {
+    nav {
+       justify-content: center;
+       width: 100%;
+    }
+    .nav-list {
+        position: relative;
+        top: 50px;
+        background-color: white;
+        width: 100%;
+        display: flex:
+        justify-content: space-between;
+    }
+    .logo {
+        position: fixed;
+        top: 0;
+        margin: 10px;
+    }
+    /* hide image in the header */
+    .header-img {
+        display: none;
+    }
+}
+
+@media(max-width: 500px) {
+    .nav-list {
+        display: block;
+        text-align: center;
+        border-top: 1px solid black;
+    }
+    .nav-item {
+        border-bottom: 1px solid black;
+    }
+    .head-item {
+        margin-top: 300px;
+    }
+    .top {
+        display: block;
+    }
+    .tp {
+        width: 100%;
+    }
+    .bottom {
+        display: block;
+    }
+    .btm {
+        width: 100%;
+    }
+}   
